crates/ruff_linter/src/rules/flake8_bandit/snapshots/ruff_linter__rules__flake8_bandit__tests__preview__S301_S301.py.snap
---
source: crates/ruff_linter/src/rules/flake8_bandit/mod.rs
---
--- Linter settings ---
-linter.preview = disabled
+linter.preview = enabled

--- Summary ---
Removed: 0
Added: 2

--- Added ---
S301 `pickle` and modules that wrap it can be unsafe when used to deserialize untrusted data, possible security issue
 --> S301.py:7:5
  |
6 | # https://github.com/astral-sh/ruff/issues/15522
7 | map(pickle.load, [])
  |     ^^^^^^^^^^^
8 | foo = pickle.load


S301 `pickle` and modules that wrap it can be unsafe when used to deserialize untrusted data, possible security issue
 --> S301.py:8:7
6 | # https://github.com/astral-sh/ruff/issues/15522
7 | map(pickle.load, [])
8 | foo = pickle.load
  |       ^^^^^^^^^^^
