crates/ruff_linter/src/rules/flake8_bandit/snapshots/ruff_linter__rules__flake8_bandit__tests__preview__S308_S308.py.snap
---
source: crates/ruff_linter/src/rules/flake8_bandit/mod.rs
---
--- Linter settings ---
-linter.preview = disabled
+linter.preview = enabled

--- Summary ---
Removed: 2
Added: 4

--- Removed ---
S308 Use of `mark_safe` may expose cross-site scripting vulnerabilities
  --> S308.py:16:1
   |
16 | @mark_safe
   | ^^^^^^^^^^
17 | def some_func():
18 |     return '<script>alert("evil!")</script>'


S308 Use of `mark_safe` may expose cross-site scripting vulnerabilities
  --> S308.py:36:1
   |
36 | @mark_safe
   | ^^^^^^^^^^
37 | def some_func():
38 |     return '<script>alert("evil!")</script>'



--- Added ---
S308 Use of `mark_safe` may expose cross-site scripting vulnerabilities
  --> S308.py:16:2
   |
16 | @mark_safe
   |  ^^^^^^^^^
17 | def some_func():
18 |     return '<script>alert("evil!")</script>'


S308 Use of `mark_safe` may expose cross-site scripting vulnerabilities
  --> S308.py:36:2
   |
36 | @mark_safe
   |  ^^^^^^^^^
37 | def some_func():
38 |     return '<script>alert("evil!")</script>'


S308 Use of `mark_safe` may expose cross-site scripting vulnerabilities
  --> S308.py:42:5
41 | # https://github.com/astral-sh/ruff/issues/15522
42 | map(mark_safe, [])
   |     ^^^^^^^^^
43 | foo = mark_safe


S308 Use of `mark_safe` may expose cross-site scripting vulnerabilities
  --> S308.py:43:7
   |
41 | # https://github.com/astral-sh/ruff/issues/15522
42 | map(mark_safe, [])
43 | foo = mark_safe
   |       ^^^^^^^^^
