crates/ruff_linter/src/rules/flake8_bandit/snapshots/ruff_linter__rules__flake8_bandit__tests__preview__S312_S312.py.snap
---
source: crates/ruff_linter/src/rules/flake8_bandit/mod.rs
---
--- Linter settings ---
-linter.preview = disabled
+linter.preview = enabled

--- Summary ---
Removed: 0
Added: 3

--- Added ---
S312 Telnet is considered insecure. Use SSH or some other encrypted protocol.
 --> S312.py:7:5
  |
6 | # https://github.com/astral-sh/ruff/issues/15522
7 | map(Telnet, [])
  |     ^^^^^^
8 | foo = Telnet


S312 Telnet is considered insecure. Use SSH or some other encrypted protocol.
  --> S312.py:8:7
 6 | # https://github.com/astral-sh/ruff/issues/15522
 7 | map(Telnet, [])
 8 | foo = Telnet
   |       ^^^^^^
 9 |
10 | import telnetlib


S312 Telnet is considered insecure. Use SSH or some other encrypted protocol.
  --> S312.py:11:5
   |
10 | import telnetlib
11 | _ = telnetlib.Telnet
   |     ^^^^^^^^^^^^^^^^
12 |
13 | from typing import Annotated
